Update tps-messaging-service til spring 3.2 #deploy-tps-messaging-service